--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,26 @@ version: '3.9'
 
 services:
 
+     # mysql
+     db:
+        container_name: mysql
+        build: ./mysql
+        command: --default-authentication-plugin=mysql_native_password
+        restart: always
+        environment:
+            MYSQL_ROOT_PASSWORD: example
+            MYSQL_DATABASE: company
+
     # php
     php:
         container_name: php
         build: ./php
         ports:
-            - 80:80
+            - 80:80 #host_machine:docker
         volumes:
             - ./php/src:/var/www/html
         depends_on:
             - db
-
-    # mysql
-    db:
-        container_name: mysql
-        image: mysql
-        command: --default-authentication-plugin=mysql_native_password
-        restart: always
-        environment:
-            MYSQL_ROOT_PASSWORD: example
     
     # adminer
     adminer:
@@ -28,4 +29,10 @@ services:
         image: adminer
         restart: always
         ports:
-            - 8080:8080
+            - 8080:8080 #host_machine:docker
+
+    phpmyadmin:
+        image: phpmyadmin
+        restart: always
+        ports:
+            - 8081:80 #host_machine:docker
